test/corpus/002_array.txt
============
Simple Array
============

[1, 2, 3, 4, 5]

---

(code
    (array
        (int)
        (int)
        (int)
        (int)
        (int)))

===============
Multiple Arrays
===============

[1, 2, 3]
[4, 5, 6]

---

(code
    (array
        (int)
        (int)
        (int))
    (array
        (int)
        (int)
        (int)))


===========
Array Value
===========

a: [1, 2, 3]
{
    b: ["1", "2", "3"]
    c: []
}

---

(code
    (pair
        (key)
        (array
            (int)
            (int)
            (int)))
    (obj
        (pair
            (key)
            (array
                (str)
                (str)
                (str)))
        (pair
            (key)
            (array))))


===========
If in Array
===========

[1, 2, 3, if false {4}, if true {5}]

---

(code
    (array
        (int)
        (int)
        (int)
        (if
            (false)
            (then
                (int)))
        (if
            (true)
            (then
                (int)))))
