test/corpus/003_var.txt
==========
Simple Var
==========

var i = 41
a: i

---

(code
    (var
        (identifier)
        (int))
    (pair
        (key)
        (identifier)))


==========
Assignment
==========

var a = 10

x: a

a = 100

y: a

---

(code
    (var
        (identifier)
        (int))
    (pair
        (key)
        (identifier))
    (asn
        (identifier)
        (int))
    (pair
        (key)
        (identifier)))


==========
Simple Let
==========

let a = 5

---

(code
    (let
        (identifier)
        (int)))


====
bool
====

let a = true

---

(code
    (let
        (identifier)
        (true)))
