test/corpus/008_mod.txt
==========
Simple Mod
==========

mod math {
    fn square(x) = x*x
}

---

(code
    (mod
        (identifier)
        (body
            (fn
                (identifier)
                (params
                    (identifier))
                (body
                    (bina
                        (identifier)
                        (identifier)))))))


==============
Mod scoped use
==============

use math

a: math.square(5)

---

(code
    (use
        (identifier))
    (pair
        (key)
        (call
            (ident_path
                (identifier)
                (identifier))
            (args
                (int)))))

==========
Direct use
==========

use math.square

x : square(8)

---

(code
    (use
        (ident_path
            (identifier)
            (identifier)))
    (pair
        (key)
        (call
            (identifier)
            (args
                (int)))))

===================
Multiple Direct Use
===================

// alternative: use math.[square, add]
use math: square, add

x: add(8, square(5))

---

(code
    (comments)
    (use
        (identifier)
        (subs
            (identifier)
            (identifier)))
    (pair
        (key)
        (call
            (identifier)
            (args
                (int)
                (call
                    (identifier)
                    (args
                        (int)))))))
