test/corpus/009_node.txt
===========
Simple Node
===========

node button(id, onclick fn) {
    place_holder: "button"
}

---

(code
    (node
        (identifier)
        (prop
            (identifier))
        (prop
            (identifier)
            (identifier))
        (body
            (pair
                (key)
                (str)))))


=============
Node building
=============

button(id:"mybutton", onclick:"on_button") {
    icon()
    text("hallo")
}

---

(code
    (call
        (identifier)
        (args
            (pair
                (key)
                (str))
            (pair
                (key)
                (str)))
        (body
            (call
                (identifier)
                (args))
            (call
                (identifier)
                (args
                    (str))))))
