test/corpus/014_xml.txt
==========
Simple XML
==========

file() {
    name("crg_drv.c")
}

---

(code
    (call
        (name)
        (args)
        (body
            (call
                (name)
                (args
                    (str))))))
