test/corpus/016_template.txt
============
Multi String
============

x : ```A B C D
E F G```

---

(code
    (pair
        (key)
        (mstr)))


==========
Format Str
==========


var x = 10
f"$x is ten"

---

(code
    (var
        (identifier)
        (int))
    (fstr
        (interpol
            (identifier))
        (spart)))


====================
Format str with expr
====================

var x = 10

f"x > 5 is ${x > 5}"
f"good ${if x > 5 {'now'}}"

---

(code
    (var
        (identifier)
        (int))
    (fstr
        (spart)
        (interpol
            (comp
                (identifier)
                (int))))
    (fstr
        (spart)
        (interpol
            (if
                (comp
                    (identifier)
                    (int))
                (then
                    (str))))))


===============
Special FString
===============

f"/*hello*/"
f`#include "CanIf_Lcfg.h"`
f`#include "CanIf_ConfigTypes.h"`
f`#if defined(USE_CANSM)`
f`#endif`


---

(code
    (fstr
        (spart))
    (fstr
        (spart))
    (fstr
        (spart))
    (fstr
        (spart))
    (fstr
        (spart)))
    
