test/corpus/017_type.txt
===========
Simple Type
===========

type Point {
    x int
    y int
}

---

(code
    (type
        (identifier)
        (type_field
            (identifier)
            (type_name))
        (type_field
            (identifier)
            (type_name))))
